--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,8 @@
 /* You can use this font for arabic sites */
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap');
 
+@import "nprogress.css";
+
 @tailwind base;
 
 @tailwind components;
